properties file from Feb 28

--- a/fxclient5.rolloverdates.properties
+++ b/fxclient5.rolloverdates.properties
@@ -2,8 +2,7 @@ Spain35=second;friday;every
 France40=second;friday;every
 Sweden30=second;friday;every
 Amsterdam25=second;friday;every
-Norway25=third;friday;every
-Denmark20=second;friday;every
+Norway25=second;friday;every
 Greece20=second;friday;every
 Oil=third;friday;every
 BrentOil=fourth;friday;every
@@ -13,7 +12,7 @@ MSCITaiwan=fourth;friday;every
 India50=fourth;friday;every
 China50=fourth;friday;every
 HeatingOil=fourth;friday;every
-COPPER=first;friday;september,december,february,march,may,june
+COPPER=fourth;friday;september,december,february,may,june
 VIXX=third;friday;every
 JPN10yBond=second;friday;march,june,september,december
 GER10YBond=first;friday;march,june,september,december
@@ -24,9 +23,9 @@ CORN=fourth;friday;february,april,june,november
 SOYBEAN=fourth;friday;february,april,june,october,december
 RICE=fourth;friday;february,april,june,august,october,december
 COFFEEC=second;friday;february,april,june,august,november
-TNOTE10=third;friday;march,june,september,december
-TBOND30=third;friday;march,june,september,december
-Australia200=third;friday;march,june,september,december
+TNOTE10=first;friday;march,june,september,december
+TBOND30=first;friday;march,june,september,december
+Australia200=second;friday;march,june,september,december
 Europe50=second;friday;march,june,september,december
 USA30=second;friday;march,june,september,december
 Germany30=second;friday;march,june,september,december
@@ -37,11 +36,12 @@ USA2000=second;friday;march,june,september,december
 Italy40=second;friday;march,june,september,december
 Swiss20=second;friday;march,june,september,december
 Poland20=second;friday;march,june,september,december
-SAfrica40=third;friday;march,june,september,december
+SAfrica40=second;friday;march,june,september,december
 Palladium=first;friday;march,may,august,december
 Gilt10Y=fourth;friday;march,june,september,december
 SUGAR=third;friday;february,april,june,september
 PLATINUM=last;friday;january,march,june,september,december
 COTTON=second;friday;february,april,june,november
-Moscow50=third;friday;march,june,september,december
+Moscow50=second;friday;march,june,september,december
 DollarIndex=third;friday;march,june,september,december
+BTCFutures=last;thursday;every
