--- a/fxclient5.rolloverdates.properties
+++ b/fxclient5.rolloverdates.properties
@@ -4,24 +4,24 @@ Sweden30=second;friday;every
 Amsterdam25=second;friday;every
 Norway25=second;friday;every
 Greece20=second;friday;every
-Oil=third;friday;every
+Oil=second;friday;every
 BrentOil=fourth;friday;every
-NaturalGas=fourth;friday;every
-HongKong45=fourth;friday;every
-MSCITaiwan=fourth;friday;every
-India50=fourth;friday;every
-China50=fourth;friday;every
+NaturalGas=third;friday;every
+HongKong45=third;friday;every
+MSCITaiwan=third;friday;every
+India50=third;friday;every
+China50=third;friday;every
 HeatingOil=fourth;friday;every
-COPPER=fourth;friday;september,december,february,may,june
-VIXX=third;friday;every
+COPPER=fourth;friday;september,december,february,april,june
+VIXX=second;friday;every
 JPN10yBond=second;friday;march,june,september,december
 GER10YBond=first;friday;march,june,september,december
 JAPAN225=first;friday;march,june,september,december
 COCOA=first;friday;february,april,june,august,november
-WHEAT=fourth;friday;february,april,june,august,november
-CORN=fourth;friday;february,april,june,november
-SOYBEAN=fourth;friday;february,april,june,october,december
-RICE=fourth;friday;february,april,june,august,october,december
+WHEAT=third;friday;february,april,june,august,november
+CORN=third;friday;february,april,june,november
+SOYBEAN=third;friday;february,april,june,october,december
+RICE=third;friday;february,april,june,august,october,december
 COFFEEC=second;friday;february,april,june,august,november
 TNOTE10=first;friday;march,june,september,december
 TBOND30=first;friday;march,june,september,december
@@ -39,9 +39,8 @@ Poland20=second;friday;march,june,september,december
 SAfrica40=second;friday;march,june,september,december
 Palladium=first;friday;march,may,august,december
 Gilt10Y=fourth;friday;march,june,september,december
-SUGAR=third;friday;february,april,june,september
+SUGAR=second;friday;february,april,june,september
 PLATINUM=last;friday;january,march,june,september,december
 COTTON=second;friday;february,april,june,november
 Moscow50=second;friday;march,june,september,december
 DollarIndex=third;friday;march,june,september,december
-BTCFutures=last;thursday;every
